deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: klausur-service
  labels:
    app: klausur
spec:
  type: NodePort
  selector:
    app: klausur
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
